--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
 </head>
+
 <body>
-    <h1>Oui j'ai juste un h1</h1>
-    <a href="/auth/google">Google Auth</a>
+    <h1>ChatService</h1>
+    <a href="/auth/google">Authentification avec google</a>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            height: 100vh;
+        }
+
+        h1,
+        a {
+            color: white;
+        }
+    </style>
 </body>
+
 </html>
