Ma fucking branch

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>ChatService</h1>
-    <a href="/auth/google">Authentification avec google</a>
+    <h1>CHAT SERVICE</h1>
+    <a href="/auth/google">S'authentifier avec google</a>
     <style>
         body {
             margin: 0;
@@ -27,6 +27,11 @@
         a {
             color: white;
         }
+
+        a:hover{
+            color: lightblue;
+        }
+
     </style>
 </body>
 
