--- a/chat.html
+++ b/chat.html
@@ -18,14 +18,25 @@
 
 <body>
     <div id="app">
-        <!--
-        <h1>Bienvenu {{user.name.familyName}} {{user.name.givenName}} dans le chat</h1>
-        <img width="300px" height="300px" :src="user.photo" alt="Photo user">
-        -->
 
+        <div class="container chatroom">
+        <h1>Marquer le nom de votre salon</h1>
+        <div class="row">
+            <div class="input-field col s6">
+                <input id="chatroom" v-model="chatroom_libelle" @keyup.enter="salon_name" 
+                placeholder="Entrer le nom du salon" type="text" class="validate" required="required">
+                <label for="chatroom">Nom du salon</label>
+            </div>
+            <button @click="salon_name" class="waves-effect waves-light btn">Entrer</button>
+        </div>
+        </div>
+
+    <div v-if=
+
+        <h1>Bienvenue dans le chat {{user.name.familyName}} {{user.name.givenName}}</h1>
+        <img width="300px" height="300px" :src="user.photo" alt="Photo user">
         <div id="chat_container">
             <ul class="chat__container">
-
                 <li v-for="message in messages" sm="11" v-bind:class="{ myMessage: message.user.id == user.id }"
                     class="a__message">
                     <div class="message__user__info">
@@ -127,6 +138,10 @@
             width: 100%;
             height: 100%;
             overflow-y: scroll;
+        }
+
+        h1,input{
+            color: blanchedalmond;
         }
     </style>
 
