Création fichier googleAuth, déplacement des fonctions pour activer authentification google dedans. +Faux utilisateur pour tester en local.

--- a/chat.html
+++ b/chat.html
@@ -150,7 +150,7 @@
                         familyName: '',
                         givenName: '',
                     },
-                    photo: '',
+                    photo: 'https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.gettyimages.com%2Fphotos%2Fhot-air-baloon-in-cappadocia-picture-id851692102%3Fs%3D612x612&imgrefurl=https%3A%2F%2Fwww.gettyimages.fr%2Fphotos%2Fmontgolfi%25C3%25A8re&tbnid=LYBbkoRiUi6hXM&vet=12ahUKEwjChLr_3_PmAhVMiRoKHUjvB7sQMygPegUIARD8AQ..i&docid=VsD1s9ywRKA6YM&w=612&h=408&q=photo&ved=2ahUKEwjChLr_3_PmAhVMiRoKHUjvB7sQMygPegUIARD8AQ',
                     locale: '',
                 },
                 socket: null
