--- a/chat.html
+++ b/chat.html
@@ -282,147 +282,16 @@
                 salon: '',
                 error: '',
                 trueValue: true,
-                messages: [
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '1',
-                            name: {
-                                familyName: 'Mathieu',
-                                givenName: 'Janio',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'Un message de type random qui ne sert a rien'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '1',
-                            name: {
-                                familyName: 'Mathieu',
-                                givenName: 'Janio',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'Un message de type random qui ne sert a rien'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '1',
-                            name: {
-                                familyName: 'Mathieu',
-                                givenName: 'Janio',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'Un message de type random qui ne sert a rien'
-                    },
-                    {
-                        salon: 'nomSalon',
-                        user: {
-                            id: '2',
-                            name: {
-                                familyName: 'Antoine',
-                                givenName: 'Mazoyer',
-                            },
-                            photo: 'https://picsum.photos/300/300',
-                            locale: 'FR',
-                        },
-                        message: 'J\'ai le seum'
-                    },
-                ],
+                messages: [],
                 text_msg: '',
                 user: {
-                    id: '1',
+                    id: '',
                     name: {
-                        familyName: 'Mathieu',
-                        givenName: 'Janio',
+                        familyName: '',
+                        givenName: '',
                     },
-                    photo: 'https://picsum.photos/300/300',
-                    locale: 'FR',
+                    photo: '',
+                    locale: '',
                 },
                 socket: null
             }
